--- a/index.html
+++ b/index.html
@@ -73,31 +73,39 @@
         <!-- Our Team -->
         <section class="team">
             <div class="container">
-                <h2 class="team-title">Our Team</h2>
-                <ul class="team-list">
-                    <li class="team-item">
-                        <img class="team-image" src="./images/img-1.jpg" alt="young man with a full beard">
-                        <h3 class="team-name">Mark Guerrero</h3>
-                        <p class="team-role">Product Designer</p>
-                    </li>
-                    <li class="team-item">
-                        <img class="team-image" src="./images/img-2.jpg" alt="smiling young man">
-                        <h3 class="team-name">Tom Ford</h3>
-                        <p class="team-role">Frontend Developer</p>
-                    </li>
-                    <li class="team-item">
-                        <img class="team-image" src="./images/img-3.jpg" alt="young woman in a pink pullover">
-                        <h3 class="team-name">Camila Garcia</h3>
-                        <p class="team-role">Marketing</p>
-                    </li>
-                    <li class="team-item">
-                        <img class="team-image" src="./images/img-4.jpg" alt="young man in a grey t-shirt">
-                        <h3 class="team-name">Daniel Wilson</h3>
-                        <p class="team-role">UI Designer</p>
-                    </li>
-                </ul>
+              <h2 class="team-title">Our Team</h2>
+              <ul class="team-list">
+                <li class="team-item">
+                  <img class="team-image" src="./images/img-1.jpg" alt="young man with a full beard">
+                  <div class="team-info">
+                    <h3 class="team-name">Mark Guerrero</h3>
+                    <p class="team-role">Product Designer</p>
+                  </div>
+                </li>
+                <li class="team-item">
+                  <img class="team-image" src="./images/img-2.jpg" alt="smiling young man">
+                  <div class="team-info">
+                    <h3 class="team-name">Tom Ford</h3>
+                    <p class="team-role">Frontend Developer</p>
+                  </div>
+                </li>
+                <li class="team-item">
+                  <img class="team-image" src="./images/img-3.jpg" alt="young woman in a pink pullover">
+                  <div class="team-info">
+                    <h3 class="team-name">Camila Garcia</h3>
+                    <p class="team-role">Marketing</p>
+                  </div>
+                </li>
+                <li class="team-item">
+                  <img class="team-image" src="./images/img-4.jpg" alt="young man in a grey t-shirt">
+                  <div class="team-info">
+                    <h3 class="team-name">Daniel Wilson</h3>
+                    <p class="team-role">UI Designer</p>
+                  </div>
+                </li>
+              </ul>
             </div>
-        </section>
+          </section>
 
         <!-- Our Portfolio -->
         <section class="portfolio">
